--- a/pages/indumentaria.html
+++ b/pages/indumentaria.html
@@ -186,11 +186,11 @@
             </div>
         </div>
         <section class="indumentaria-contenedor">
-            <div>
+            <div class="indumentaria-productos">
                 <a href="">
                     <img src="../img/indu-adidas-canguro-essentialas-brandlove.png" alt="w adidas court plataform">
                     <h3>BUZO ADIDAS ESSENTIALS BRAND LOVE</h3>
-                    <div>
+                    <div class="precios-contenedor">
                         <strong class="precio">
                             <span class="precio-moneda">UYU</span>
                             <span class="precio-monto">3.990</span>
@@ -198,11 +198,11 @@
                     </div>
                 </a>
             </div>
-            <div>
+            <div class="indumentaria-productos">
                 <a href="">
                     <img src="../img/indu-nacional-canguro-retrohealthy.png" alt="Lacoste ag-lt23 ultra">
                     <h3>BUZO NACIONAL RETRO HEALTHY FABRIC</h3>
-                    <div>
+                    <div class="precios-contenedor">
                         <strong class="precio">
                             <span class="precio-moneda">UYU</span>
                             <span class="precio-monto">3.790</span>
@@ -210,11 +210,11 @@
                     </div>
                 </a>
             </div>
-            <div>
+            <div class="indumentaria-productos">
                 <a href="">
                     <img src="../img/indu-nike-campera-hoodiefz.png" alt="flex experience 11">
                     <h3>CAMPERA NIKE CLUB HOODIE FZ</h3>
-                    <div>
+                    <div class="precios-contenedor">
                         <strong class="precio">
                             <span class="precio-moneda">UYU</span>
                             <span class="precio-monto">3.990</span>
@@ -222,11 +222,11 @@
                     </div>
                 </a>
             </div>
-            <div>
+            <div class="indumentaria-productos">
                 <a href="">
                     <img src="../img/indu-nike-futbol-remera-camisetabarcelona-secundaria.png" alt="phantom gk pro fg">
                     <h3>CAMISETA DE FÚTBOL NIKE FC BARCELONA STADIUM 4TH</h3>
-                    <div>
+                    <div class="precios-contenedor">
                         <strong class="precio">
                             <span class="precio-moneda">UYU</span>
                             <span class="precio-monto">3.490</span>
@@ -234,11 +234,11 @@
                     </div>
                 </a>
             </div>
-            <div>
+            <div class="indumentaria-productos">
                 <a href="">
                     <img src="../img/indu-nike-remera-drif-fit-uvmiler.png" alt="converse all star hi rojas">
                     <h3>REMERA NIKE DRI-FIT MILER</h3>
-                    <div>
+                    <div class="precios-contenedor">
                         <strong class="precio">
                             <span class="precio-moneda">UYU</span>
                             <span class="precio-monto">1.890</span>
@@ -250,11 +250,11 @@
                     </div>
                 </a>
             </div>
-            <div>
+            <div class="indumentaria-productos">
                 <a href="">
                     <img src="../img/indu-puma-calza-favoriteforever-highwasit.png" alt="court vision low blancas">
                     <h3>CALZA PUMA FAVORITE FOREVER HIGH WAIST</h3>
-                    <div>
+                    <div class="precios-contenedor">
                         <strong class="precio">
                             <span class="precio-moneda">UYU</span>
                             <span class="precio-monto">2.690</span>
@@ -262,11 +262,11 @@
                     </div>
                 </a>
             </div>
-            <div>
+            <div class="indumentaria-productos">
                 <a href="">
                     <img src="../img/indu-puma-canguro-powertape-tr.png" alt="air max sc">
                     <h3>BUZO PUMA POWER TAPE TR</h3>
-                    <div>
+                    <div class="precios-contenedor">
                         <strong class="precio">
                             <span class="precio-moneda">UYU</span>
                             <span class="precio-monto">3.490</span>
@@ -274,11 +274,11 @@
                     </div>
                 </a>
             </div>
-            <div>
+            <div class="indumentaria-productos">
                 <a href="">
                     <img src="../img/indu-puma-remera-essential-small-logo.png" alt="adidas hoops 3.0">
                     <h3>REMERA PUMA ESSENTIALS SMALL LOGO</h3>
-                    <div>
+                    <div class="precios-contenedor">
                         <strong class="precio">
                             <span class="precio-moneda">UYU</span>
                             <span class="precio-monto">1.290</span>
@@ -286,11 +286,11 @@
                     </div>
                 </a>
             </div>
-            <div>
+            <div class="indumentaria-productos">
                 <a href="">
                     <img src="../img/indu-speedo-trajedebaño-logo-medalist.png" alt="puma smash 3.0">
                     <h3>TRAJE DE BAÑO SPEEDO MEDLEY LOGO MEDALIST</h3>
-                    <div>
+                    <div class="precios-contenedor">
                         <strong class="precio">
                             <span class="precio-moneda">UYU</span>
                             <span class="precio-monto">3.190</span>
@@ -298,11 +298,11 @@
                     </div>
                 </a>
             </div>
-            <div>
+            <div class="indumentaria-productos">
                 <a href="">
                     <img src="../img/indu-umbro-camperon-new-u-classic.png" alt="court vision negras">
                     <h3>PARKA UMBRO NEW U-CLASSIC</h3>
-                    <div>
+                    <div class="precios-contenedor">
                         <strong class="precio">
                             <span class="precio-moneda">UYU</span>
                             <span class="precio-monto">3.490</span>
@@ -310,11 +310,11 @@
                     </div>
                 </a>
             </div>
-            <div>
+            <div class="indumentaria-productos">
                 <a href="">
                     <img src="../img/indu-umbro-canguro-pocketfleece.png" alt="converse low blancas">
                     <h3>CANGURO UMBRO POCKET FLEECE FABRIC</h3>
-                    <div>
+                    <div class="precios-contenedor">
                         <strong class="precio">
                             <span class="precio-moneda">UYU</span>
                             <span class="precio-monto">1.990</span>
@@ -326,12 +326,12 @@
                     </div>
                 </a>
             </div>
-            <div>
+            <div class="indumentaria-productos">
                 <a href="">
                     <img src="../img/indu-uruguay-remera-puma-training.png"
                         alt="vomero hombre gris">
                     <h3>REMERA PUMA URUGUAY TRAINING</h3>
-                    <div>
+                    <div class="precios-contenedor">
                         <strong class="precio">
                             <span class="precio-moneda">UYU</span>
                             <span class="precio-monto">2.590</span>
