--- a/pages/accesorios.html
+++ b/pages/accesorios.html
@@ -10,6 +10,8 @@
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <!---CSS--->
     <link rel="stylesheet" href="../css/estilos.css">
+    <!---ANIMATIONS---->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 </head>
 
 <body>
@@ -217,11 +219,11 @@
             </div>
         </div>
         <section class="accesorios-contenedor">
-            <div>
+            <div class="productos">
                 <a href="">
                     <img src="../img/acc-adidas-bolso-tr-duffle.png" alt="w adidas court plataform">
                     <h3>BOLSO ADIDAS TR DUFFLE M</h3>
-                    <div>
+                    <div class="precios-contenedor">
                         <strong class="precio">
                             <span class="precio-moneda">UYU</span>
                             <span class="precio-monto">2.490</span>
@@ -229,11 +231,11 @@
                     </div>
                 </a>
             </div>
-            <div>
+            <div class="productos">
                 <a href="">
                     <img src="../img/acc-adidas-medias-adi23-sock.png" alt="Lacoste ag-lt23 ultra">
                     <h3>MEDIAS ADIDAS ADI 23 SOCK</h3>
-                    <div>
+                    <div class="precios-contenedor">
                         <strong class="precio">
                             <span class="precio-moneda">UYU</span>
                             <span class="precio-monto">1.290</span>
@@ -241,11 +243,11 @@
                     </div>
                 </a>
             </div>
-            <div>
+            <div class="productos">
                 <a href="">
                     <img src="../img/acc-adidas-pelota-basket-all-court.png" alt="flex experience 11">
                     <h3>PELOTA DE BASKET ADIDAS ALL COURT 3.0</h3>
-                    <div>
+                    <div class="precios-contenedor">
                         <strong class="precio">
                             <span class="precio-moneda">UYU</span>
                             <span class="precio-monto">2.490</span>
@@ -257,11 +259,11 @@
                     </div>
                 </a>
             </div>
-            <div>
+            <div class="productos">
                 <a href="">
                     <img src="../img/acc-adidas-pelota-brasil-cup.png" alt="phantom gk pro fg">
                     <h3>PELOTA DE FÚTBOL ADIDAS BRASIL CLUB</h3>
-                    <div>
+                    <div class="precios-contenedor">
                         <strong class="precio">
                             <span class="precio-moneda">UYU</span>
                             <span class="precio-monto">1.590</span>
@@ -269,11 +271,11 @@
                     </div>
                 </a>
             </div>
-            <div>
+            <div class="productos">
                 <a href="">
                     <img src="../img/acc-adidas-vincha-headban-3pp.png" alt="converse all star hi rojas">
                     <h3>VINCHA ADIDAS HEADBAN 3PP</h3>
-                    <div>
+                    <div class="precios-contenedor">
                         <strong class="precio">
                             <span class="precio-moneda">UYU</span>
                             <span class="precio-monto">990</span>
@@ -285,11 +287,11 @@
                     </div>
                 </a>
             </div>
-            <div>
+            <div class="productos">
                 <a href="">
                     <img src="../img/acc-lacoste-gorro-contrast-border.png" alt="court vision low blancas">
                     <h3>GORRO LACOSTE CONTRAST BORDER</h3>
-                    <div>
+                    <div class="precios-contenedor">
                         <strong class="precio">
                             <span class="precio-moneda">UYU</span>
                             <span class="precio-monto">2.690</span>
@@ -297,11 +299,11 @@
                     </div>
                 </a>
             </div>
-            <div>
+            <div class="productos">
                 <a href="">
                     <img src="../img/acc-nike-inflador-hyperspeed.png" alt="air max sc">
                     <h3>INFLADOR NIKE HYPERSPEED</h3>
-                    <div>
+                    <div class="precios-contenedor">
                         <strong class="precio">
                             <span class="precio-moneda">UYU</span>
                             <span class="precio-monto">790</span>
@@ -313,11 +315,11 @@
                     </div>
                 </a>
             </div>
-            <div>
+            <div class="productos">
                 <a href="">
                     <img src="../img/acc-nike-medias-multiplier-2pack.png" alt="adidas hoops 3.0">
                     <h3>MEDIAS NIKE MULTIPLIER 2 PACK</h3>
-                    <div>
+                    <div class="precios-contenedor">
                         <strong class="precio">
                             <span class="precio-moneda">UYU</span>
                             <span class="precio-monto">1.190</span>
@@ -325,11 +327,11 @@
                     </div>
                 </a>
             </div>
-            <div>
+            <div class="productos">
                 <a href="">
                     <img src="../img/acc-nike-mochila-elemental-premium.png" alt="puma smash 3.0">
                     <h3>MOCHILA NIKE ELEMENTAL PREMIUM</h3>
-                    <div>
+                    <div class="precios-contenedor">
                         <strong class="precio">
                             <span class="precio-moneda">UYU</span>
                             <span class="precio-monto">2.490</span>
@@ -341,11 +343,11 @@
                     </div>
                 </a>
             </div>
-            <div>
+            <div class="productos">
                 <a href="">
                     <img src="../img/acc-nike-pelota-mercuria-fade.png" alt="court vision negras">
                     <h3>PELOTA NIKE MERCURIAL FADE</h3>
-                    <div>
+                    <div class="precios-contenedor">
                         <strong class="precio">
                             <span class="precio-moneda">UYU</span>
                             <span class="precio-monto">1.390</span>
@@ -353,11 +355,11 @@
                     </div>
                 </a>
             </div>
-            <div>
+            <div class="productos">
                 <a href="">
                     <img src="../img/acc-puma-gorro-archive-logo.png" alt="converse low blancas">
                     <h3>GORRO PUMA ARCHIVE LOGO</h3>
-                    <div>
+                    <div class="precios-contenedor">
                         <strong class="precio">
                             <span class="precio-moneda">UYU</span>
                             <span class="precio-monto">890</span>
@@ -365,11 +367,11 @@
                     </div>
                 </a>
             </div>
-            <div>
+            <div class="productos">
                 <a href="">
                     <img src="../img/acc-puma-morral-academy-portable.png" alt="vomero hombre gris">
                     <h3>MORRAL PUMA ACADEMY PORTABLE</h3>
-                    <div>
+                    <div class="precios-contenedor">
                         <strong class="precio">
                             <span class="precio-moneda">UYU</span>
                             <span class="precio-monto">890</span>
@@ -495,6 +497,9 @@
             </div>
         </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous">
+    </script>
 </body>
 
 </html>
