--- a/pages/calzado.html
+++ b/pages/calzado.html
@@ -10,6 +10,8 @@
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <!---CSS--->
     <link rel="stylesheet" href="../css/estilos.css">
+    <!---ANIMATIONS---->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 </head>
 
 <body>
@@ -167,11 +169,11 @@
             </div>
         </div>
         <section class="calzado-contenedor">
-                <div>
+            <div class="productos">
                     <a href="">
                         <img src="../img/adidas-court-platform-w-blancas-plateadas.png" alt="w adidas court plataform">
                         <h3>ADIDAS COURT PLATAFORM</h3>
-                        <div>
+                        <div class="precios-contenedor">
                             <strong class="precio">
                                 <span class="precio-moneda">UYU</span>
                                 <span class="precio-monto">3.690</span>
@@ -183,11 +185,11 @@
                         </div>
                     </a>
                 </div>
-                <div>
+                <div class="productos">
                     <a href="">
                         <img src="../img/lacoste-ag-lt23-blancas.png" alt="Lacoste ag-lt23 ultra">
                         <h3>LACOSTE AG-LT23 ULTRA</h3>
-                        <div>
+                        <div class="precios-contenedor">
                             <strong class="precio">
                                 <span class="precio-moneda">UYU</span>
                                 <span class="precio-monto">12.400</span>
@@ -195,11 +197,11 @@
                         </div>
                     </a>
                 </div>    
-                <div>
+                <div class="productos">
                     <a href="">
                         <img src="../img/nike-flex-experience-run-11-beige.png" alt="flex experience 11">
                         <h3>NIKE FLEX EXPERIENCE RUN 11</h3>
-                        <div>
+                        <div class="precios-contenedor">
                             <strong class="precio">
                                 <span class="precio-moneda">UYU</span>
                                 <span class="precio-monto">4.690</span>
@@ -207,11 +209,11 @@
                         </div>
                     </a>
                 </div>
-                <div>
+                <div class="productos">
                     <a href="">
                         <img src="../img/nike-phantom-gx-pro-fg-amarillos.png" alt="phantom gk pro fg">
                         <h3>NIKE PHANTOM GX PRO FG</h3>
-                        <div>
+                        <div class="precios-contenedor">
                             <strong class="precio">
                                 <span class="precio-moneda">UYU</span>
                                 <span class="precio-monto">7.990</span>
@@ -223,11 +225,11 @@
                         </div>
                     </a>
                 </div>
-                <div>
+                <div class="productos">
                     <a href="">
                         <img src="../img/converse-chuck-taylor-all-star-hi-roajs.png" alt="converse all star hi rojas">
                         <h3>CONVERSE CHUCK TAYLOR ALL STAR HI</h3>
-                        <div>
+                        <div class="precios-contenedor">
                             <strong class="precio">
                                 <span class="precio-moneda">UYU</span>
                                 <span class="precio-monto">3.790</span>
@@ -235,11 +237,11 @@
                         </div>
                     </a>
                 </div>
-                <div>
+                <div class="productos">
                     <a href="">
                         <img src="../img/nike-court-vision-low-blanchas-swoosh-negro.png" alt="court vision low blancas">
                         <h3>COURT VISION LOW</h3>
-                        <div>
+                        <div class="precios-contenedor">
                             <strong class="precio">
                                 <span class="precio-moneda">UYU</span>
                                 <span class="precio-monto">4.990</span>
@@ -247,11 +249,11 @@
                         </div>
                     </a>
                 </div>
-                <div>
+                <div class="productos">
                     <a href="">
                         <img src="../img/nike-air-max-sc-rosado.png" alt="air max sc">
                         <h3>NIKE AIR MAX SC</h3>
-                        <div>
+                        <div class="precios-contenedor">
                             <strong class="precio">
                                 <span class="precio-moneda">UYU</span>
                                 <span class="precio-monto">5.690</span>
@@ -259,11 +261,11 @@
                         </div>
                     </a>
                 </div>
-                <div>
+                <div class="productos">
                     <a href="">
                         <img src="../img/adidas-hoops-3-0-blancas.png" alt="adidas hoops 3.0">
                         <h3>ADIDAS HOOPS 3.0</h3>
-                        <div>
+                        <div class="precios-contenedor">
                             <strong class="precio">
                                 <span class="precio-moneda">UYU</span>
                                 <span class="precio-monto">4.690</span>
@@ -271,11 +273,11 @@
                         </div>
                     </a>
                 </div>
-                <div>
+                <div class="productos">
                     <a href="">
                         <img src="../img/puma-smash-3-0-amarillas.png" alt="puma smash 3.0">
                         <h3>PUMA SMASH 3.0</h3>
-                        <div>
+                        <div class="precios-contenedor">
                             <strong class="precio">
                                 <span class="precio-moneda">UYU</span>
                                 <span class="precio-monto">3.990</span>
@@ -283,11 +285,11 @@
                         </div>
                     </a>
                 </div>
-                <div>
+                <div class="productos">
                     <a href="">
                         <img src="../img/nike-court-vision-low-negras-swoosh-blanco.png" alt="court vision negras">
                         <h3>COURT VISION LOW</h3>
-                        <div>
+                        <div class="precios-contenedor">
                             <strong class="precio">
                                 <span class="precio-moneda">UYU</span>
                                 <span class="precio-monto">3.790</span>
@@ -299,11 +301,11 @@
                         </div>
                     </a>
                 </div>
-                <div>
+                <div class="productos">
                     <a href="">
                         <img src="../img/converse-chuck-taylor-all-star-ox-blancas.png" alt="converse low blancas">
                         <h3>CONVERSE CHUCK TAYLOR ALL STAR OX</h3>
-                        <div>
+                        <div class="precios-contenedor">
                             <strong class="precio">
                                 <span class="precio-moneda">UYU</span>
                                 <span class="precio-monto">7.490</span>
@@ -311,11 +313,11 @@
                         </div>
                     </a>
                 </div>
-                <div>
+                <div class="productos">
                     <a href="">
                         <img src="../img/nike-zoom-superfly-9-academy-xxv-jr-pleateadas-rosadas.png" alt="vomero hombre gris">
                         <h3>NIKE ZOOM SUPERFLY 9 ACADEMY XXV</h3>
-                        <div>
+                        <div class="precios-contenedor">
                             <strong class="precio">
                                 <span class="precio-moneda">UYU</span>
                                 <span class="precio-monto">5.290</span>
