--- a/pages/indumentaria.html
+++ b/pages/indumentaria.html
@@ -8,7 +8,10 @@
     <!---BOOSTRAP--->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/estilos.css">
+    <!----CSS---->
+        <link rel="stylesheet" href="../css/estilos.css">
+    <!---ANIMATIONS---->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 </head>
 
 <body>
@@ -186,7 +189,7 @@
             </div>
         </div>
         <section class="indumentaria-contenedor">
-            <div class="indumentaria-productos">
+            <div class="productos">
                 <a href="">
                     <img src="../img/indu-adidas-canguro-essentialas-brandlove.png" alt="w adidas court plataform">
                     <h3>BUZO ADIDAS ESSENTIALS BRAND LOVE</h3>
@@ -198,7 +201,7 @@
                     </div>
                 </a>
             </div>
-            <div class="indumentaria-productos">
+            <div class="productos">
                 <a href="">
                     <img src="../img/indu-nacional-canguro-retrohealthy.png" alt="Lacoste ag-lt23 ultra">
                     <h3>BUZO NACIONAL RETRO HEALTHY FABRIC</h3>
@@ -210,7 +213,7 @@
                     </div>
                 </a>
             </div>
-            <div class="indumentaria-productos">
+            <div class="productos">
                 <a href="">
                     <img src="../img/indu-nike-campera-hoodiefz.png" alt="flex experience 11">
                     <h3>CAMPERA NIKE CLUB HOODIE FZ</h3>
@@ -222,7 +225,7 @@
                     </div>
                 </a>
             </div>
-            <div class="indumentaria-productos">
+            <div class="productos">
                 <a href="">
                     <img src="../img/indu-nike-futbol-remera-camisetabarcelona-secundaria.png" alt="phantom gk pro fg">
                     <h3>CAMISETA DE FÚTBOL NIKE FC BARCELONA STADIUM 4TH</h3>
@@ -234,7 +237,7 @@
                     </div>
                 </a>
             </div>
-            <div class="indumentaria-productos">
+            <div class="productos">
                 <a href="">
                     <img src="../img/indu-nike-remera-drif-fit-uvmiler.png" alt="converse all star hi rojas">
                     <h3>REMERA NIKE DRI-FIT MILER</h3>
@@ -250,7 +253,7 @@
                     </div>
                 </a>
             </div>
-            <div class="indumentaria-productos">
+            <div class="productos">
                 <a href="">
                     <img src="../img/indu-puma-calza-favoriteforever-highwasit.png" alt="court vision low blancas">
                     <h3>CALZA PUMA FAVORITE FOREVER HIGH WAIST</h3>
@@ -262,7 +265,7 @@
                     </div>
                 </a>
             </div>
-            <div class="indumentaria-productos">
+            <div class="productos">
                 <a href="">
                     <img src="../img/indu-puma-canguro-powertape-tr.png" alt="air max sc">
                     <h3>BUZO PUMA POWER TAPE TR</h3>
@@ -274,7 +277,7 @@
                     </div>
                 </a>
             </div>
-            <div class="indumentaria-productos">
+            <div class="productos">
                 <a href="">
                     <img src="../img/indu-puma-remera-essential-small-logo.png" alt="adidas hoops 3.0">
                     <h3>REMERA PUMA ESSENTIALS SMALL LOGO</h3>
@@ -286,7 +289,7 @@
                     </div>
                 </a>
             </div>
-            <div class="indumentaria-productos">
+            <div class="productos">
                 <a href="">
                     <img src="../img/indu-speedo-trajedebaño-logo-medalist.png" alt="puma smash 3.0">
                     <h3>TRAJE DE BAÑO SPEEDO MEDLEY LOGO MEDALIST</h3>
@@ -298,7 +301,7 @@
                     </div>
                 </a>
             </div>
-            <div class="indumentaria-productos">
+            <div class="productos">
                 <a href="">
                     <img src="../img/indu-umbro-camperon-new-u-classic.png" alt="court vision negras">
                     <h3>PARKA UMBRO NEW U-CLASSIC</h3>
@@ -310,7 +313,7 @@
                     </div>
                 </a>
             </div>
-            <div class="indumentaria-productos">
+            <div class="productos">
                 <a href="">
                     <img src="../img/indu-umbro-canguro-pocketfleece.png" alt="converse low blancas">
                     <h3>CANGURO UMBRO POCKET FLEECE FABRIC</h3>
@@ -326,7 +329,7 @@
                     </div>
                 </a>
             </div>
-            <div class="indumentaria-productos">
+            <div class="productos">
                 <a href="">
                     <img src="../img/indu-uruguay-remera-puma-training.png"
                         alt="vomero hombre gris">
@@ -459,7 +462,7 @@
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous">
-        </script>
+    </script>
 </body>
 
 </html>
