--- a/pages/rebajas.html
+++ b/pages/rebajas.html
@@ -6,6 +6,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <!---CSS--->
     <link rel="stylesheet" href="../css/estilos.css">
+    <!---ANIMATIONS---->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 </head>
 
 <body>
@@ -172,7 +174,7 @@
                 <a href="">
                     <img src="../img/rebajas-acc-adidas-gorro-performance-beanie.png" alt="w adidas court plataform">
                     <h3 class="producto-rebaja">GORRO ADIDAS PERFORMANCE BANIE</h3>
-                    <div>
+                    <div class="precios-contenedor">
                         <strong class="precio">
                             <span class="precio-moneda">UYU</span>
                             <span class="precio-monto">990</span>
@@ -188,7 +190,7 @@
                 <a href="">
                     <img src="../img/rebajas-acc-nike-mochila-element.png" alt="Lacoste ag-lt23 ultra">
                     <h3 class="producto-rebaja">MOCHILA NIKE ELEMENTAL</h3>
-                    <div>
+                    <div class="precios-contenedor">
                         <strong class="precio">
                             <span class="precio-moneda">UYU</span>
                             <span class="precio-monto">1.790</span>
@@ -204,7 +206,7 @@
                 <a href="">
                     <img src="../img/rebajas-acc-nike-top-dri-fit.png" alt="flex experience 11">
                     <h3 class="producto-rebaja">TOP NIKE DRI-FIT INDY V-NECK</h3>
-                    <div>
+                    <div class="precios-contenedor">
                         <strong class="precio">
                             <span class="precio-moneda">UYU</span>
                             <span class="precio-monto">1.790</span>
@@ -220,7 +222,7 @@
                 <a href="">
                     <img src="../img/rebajas-acc-umbro-canilleras-pro.png" alt="phantom gk pro fg">
                     <h3 class="producto-rebaja">CANILLERAS UMBRO PRO</h3>
-                    <div>
+                    <div class="precios-contenedor">
                         <strong class="precio">
                             <span class="precio-moneda">UYU</span>
                             <span class="precio-monto">790</span>
@@ -236,7 +238,7 @@
                     <a href="">
                     <img src="../img/rebajas-calzado-adidas-adilette-comfort.png" alt="converse all star hi rojas">
                     <h3 class="producto-rebaja">ADIDAS ADILETTE COMFORT</h3>
-                    <div>
+                    <div class="precios-contenedor">
                         <strong class="precio">
                             <span class="precio-moneda">UYU</span>
                             <span class="precio-monto">2.590</span>
@@ -253,7 +255,7 @@
                     <img src="../img/rebajas-calzado-adidas-ozelle-cloudfoam-lifestyle.png.png"
                         alt="court vision low blancas">
                     <h3 class="producto-rebaja">ADIDAS OZELLE CLOUDFOAM LIFESTYLE</h3>
-                    <div>
+                    <div class="precios-contenedor">
                         <strong class="precio">
                             <span class="precio-moneda">UYU</span>
                             <span class="precio-monto">4.790</span>
@@ -269,7 +271,7 @@
                 <a href="">
                     <img src="../img/rebajas-calzado-nike-react-infinity-runfk3.png" alt="air max sc">
                     <h3 class="producto-rebaja">NIKE REACT INFINITY RUN FK 3</h3>
-                    <div>
+                    <div class="precios-contenedor">
                         <strong class="precio">
                             <span class="precio-moneda">UYU</span>
                             <span class="precio-monto">8.490</span>
@@ -285,7 +287,7 @@
                 <a href="">
                     <img src="../img/rebajas-calzado-puma-anzarun-lite-slipon.png" alt="adidas hoops 3.0">
                     <h3 class="producto-rebaja">PUMA ANZARUN LITE SLIPON</h3>
-                    <div>
+                    <div class="precios-contenedor">
                         <strong class="precio">
                             <span class="precio-moneda">UYU</span>
                             <span class="precio-monto">3.290</span>
@@ -301,7 +303,7 @@
                 <a href="">
                     <img src="../img/rebajas-indu-nike-pantalon-stardust-jogger.png" alt="puma smash 3.0">
                     <h3 class="producto-rebaja">PANTALON NIKE NSW STARDUST JOGGER</h3>
-                    <div>
+                    <div class="precios-contenedor">
                         <strong class="precio">
                             <span class="precio-moneda">UYU</span>
                             <span class="precio-monto">3.290</span>
@@ -317,7 +319,7 @@
                 <a href="">
                     <img src="../img/rebajas-indu-nike-remera-dri-fit-run-division.png" alt="court vision negras">
                     <h3 class="producto-rebaja">REMERA NIKE DRI-FIT RUN DIVISION</h3>
-                    <div>
+                    <div class="precios-contenedor">
                         <strong class="precio">
                             <span class="precio-moneda">UYU</span>
                             <span class="precio-monto">2.790</span>
@@ -333,7 +335,7 @@
                 <a href="">
                     <img src="../img/rebajas-indu-nike-remera-psg-alternativa.png" alt="converse low blancas">
                     <h3 class="producto-rebaja">REMERA NIKE PSG ALTERNATIVO</h3>
-                    <div>
+                    <div class="precios-contenedor">
                         <strong class="precio">
                             <span class="precio-moneda">UYU</span>
                             <span class="precio-monto">3.390</span>
@@ -349,7 +351,7 @@
                 <a href="">
                     <img src="../img/rebajas-indu-nike-remera-sportwear-club-tee.png" alt="vomero hombre gris">
                     <h3 class="producto-rebaja">REMERA NIKE SPORTWEAR CLUB TEE</h3>
-                    <div>
+                    <div class="precios-contenedor">
                         <strong class="precio">
                             <span class="precio-moneda">UYU</span>
                             <span class="precio-monto">1.290</span>
@@ -368,7 +370,6 @@
                             <a href="">
                                 <img src="../img/carousel-indu-adidas-camiseta-juventus.png" class="d-block w-100" alt="...">
                             </a>
-                            
                         </div>
                         <div class="carousel-item">
                             <a href="">
