--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>El Rincón</title>
+    <title>El Rincón - Tienda de Deportes y Moda online</title>
     <!---BOOSTRAP--->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
@@ -12,6 +12,13 @@
     <link rel="stylesheet" href="./css/estilos.css">
     <!---ANIMATIONS---->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <!----META DESCRIPTION ---->
+
+    <!----KEYWORD---->
+
+    <!----FAVICON---->
+    <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
+
 </head>
 
 <body>
@@ -116,7 +123,7 @@
                 </div>
                 <div class="medias-adi-light-precio">
                     <a href="">
-                        <img src="./img/medias-adidas-light-negras.png" alt="canguro celeste nike">
+                        <img src="./img/medias-adidas-light-negras.png" alt="medias adidas light negras x3s">
                         <h3>MEDIAS ADIDAS LIGHT LOW 3 PACK</h3>
                         <div>
                             <strong class="precio">
@@ -128,7 +135,7 @@
                 </div>
                 <div class="w-adidas-startyourrun-violeta">
                     <a href="">
-                        <img src="./img/w-adidas-startyourrun-violeta.png" alt="pantalon deportivo adidas">
+                        <img src="./img/w-adidas-startyourrun-violeta.png" alt="w adidas startyounrrun violeta">
                         <h3>ADIDAS STARTYOURRUN </h3>
                         <div>
                             <strong class="precio">
@@ -144,7 +151,7 @@
                 </div>
                 <div class="gorro-puma-archive-heather-beanie-verde">
                     <a href="">
-                        <img src="./img/gorro-puma-archive-heather-beanie-verde.png">
+                        <img src="./img/gorro-puma-archive-heather-beanie-verde.png" alt="gorro de lana puma verde">
                         <h3>GORRO PUMA ARCHIVE HEATHER BEANIE</h3>
                         <div>
                             <strong class="precio">
@@ -163,7 +170,7 @@
             <div class="moda-contenedor">
                 <div class="moda-remera-lacoste">
                     <a href="">
-                        <img src="./img/remera-lacoste-regular.png" alt="remera lacoste">
+                        <img src="./img/remera-lacoste-regular.png" alt="remera estilo chomba lacoste">
                         <h3>REMERA LACOSTE CLASSIC FIT</h3>
                         <strong class="precio">
                             <span class="precio-moneda">UYU</span>
@@ -205,7 +212,7 @@
                 </div>
                 <div class="moda-remera-adidas">
                     <a href="">
-                        <img src="./img/remera-adidas-bordo.png" alt="remera adidas">
+                        <img src="./img/remera-adidas-bordo.png" alt="remera adidas bordo">
                         <h3>
                             REMERA ADIDAS ESTAMPADO ARCHIVE
                         </h3>
@@ -345,10 +352,10 @@
                 <ul>
                     <li>
                         <a href="https://www.instagram.com/naim.caceres18/" target="_blank">
-                            <img src="./img/instagram.png" width="50" alt="logo Instagram">
+                            <img src="./img/instagram.png" width="50" alt="Instagram">
                         </a>
                         <a href="https://twitter.com/naimcaceres18" target="_blank">
-                            <img src="./img/twitter.png" width="50" alt="logo Twitter">
+                            <img src="./img/twitter.png" width="50" alt="Twitter">
                         </a>
                     </li>
                 </ul>
