--- a/pages/accesorios.html
+++ b/pages/accesorios.html
@@ -221,7 +221,7 @@
         <section class="accesorios-contenedor">
             <div class="productos">
                 <a href="">
-                    <img src="../img/acc-adidas-bolso-tr-duffle.png" alt="w adidas court plataform">
+                    <img src="../img/acc-adidas-bolso-tr-duffle.png" alt="adidas bolso training">
                     <h3>BOLSO ADIDAS TR DUFFLE M</h3>
                     <div class="precios-contenedor">
                         <strong class="precio">
@@ -233,7 +233,7 @@
             </div>
             <div class="productos">
                 <a href="">
-                    <img src="../img/acc-adidas-medias-adi23-sock.png" alt="Lacoste ag-lt23 ultra">
+                    <img src="../img/acc-adidas-medias-adi23-sock.png" alt="medias adidas light 3">
                     <h3>MEDIAS ADIDAS ADI 23 SOCK</h3>
                     <div class="precios-contenedor">
                         <strong class="precio">
@@ -245,7 +245,7 @@
             </div>
             <div class="productos">
                 <a href="">
-                    <img src="../img/acc-adidas-pelota-basket-all-court.png" alt="flex experience 11">
+                    <img src="../img/acc-adidas-pelota-basket-all-court.png" alt="pelota adidas basketball all court">
                     <h3>PELOTA DE BASKET ADIDAS ALL COURT 3.0</h3>
                     <div class="precios-contenedor">
                         <strong class="precio">
@@ -261,7 +261,7 @@
             </div>
             <div class="productos">
                 <a href="">
-                    <img src="../img/acc-adidas-pelota-brasil-cup.png" alt="phantom gk pro fg">
+                    <img src="../img/acc-adidas-pelota-brasil-cup.png" alt="pelota adidas brasil cup">
                     <h3>PELOTA DE FÚTBOL ADIDAS BRASIL CLUB</h3>
                     <div class="precios-contenedor">
                         <strong class="precio">
@@ -273,7 +273,7 @@
             </div>
             <div class="productos">
                 <a href="">
-                    <img src="../img/acc-adidas-vincha-headban-3pp.png" alt="converse all star hi rojas">
+                    <img src="../img/acc-adidas-vincha-headban-3pp.png" alt="vincha adidas headban">
                     <h3>VINCHA ADIDAS HEADBAN 3PP</h3>
                     <div class="precios-contenedor">
                         <strong class="precio">
@@ -289,7 +289,7 @@
             </div>
             <div class="productos">
                 <a href="">
-                    <img src="../img/acc-lacoste-gorro-contrast-border.png" alt="court vision low blancas">
+                    <img src="../img/acc-lacoste-gorro-contrast-border.png" alt="gorro lacoste border contrast">
                     <h3>GORRO LACOSTE CONTRAST BORDER</h3>
                     <div class="precios-contenedor">
                         <strong class="precio">
@@ -317,7 +317,7 @@
             </div>
             <div class="productos">
                 <a href="">
-                    <img src="../img/acc-nike-medias-multiplier-2pack.png" alt="adidas hoops 3.0">
+                    <img src="../img/acc-nike-medias-multiplier-2pack.png" alt="medias nike multipler x2">
                     <h3>MEDIAS NIKE MULTIPLIER 2 PACK</h3>
                     <div class="precios-contenedor">
                         <strong class="precio">
@@ -329,7 +329,7 @@
             </div>
             <div class="productos">
                 <a href="">
-                    <img src="../img/acc-nike-mochila-elemental-premium.png" alt="puma smash 3.0">
+                    <img src="../img/acc-nike-mochila-elemental-premium.png" alt="mochila nike elemntal premium">
                     <h3>MOCHILA NIKE ELEMENTAL PREMIUM</h3>
                     <div class="precios-contenedor">
                         <strong class="precio">
@@ -345,7 +345,7 @@
             </div>
             <div class="productos">
                 <a href="">
-                    <img src="../img/acc-nike-pelota-mercuria-fade.png" alt="court vision negras">
+                    <img src="../img/acc-nike-pelota-mercuria-fade.png" alt="pelota nike mercurial fade">
                     <h3>PELOTA NIKE MERCURIAL FADE</h3>
                     <div class="precios-contenedor">
                         <strong class="precio">
@@ -357,7 +357,7 @@
             </div>
             <div class="productos">
                 <a href="">
-                    <img src="../img/acc-puma-gorro-archive-logo.png" alt="converse low blancas">
+                    <img src="../img/acc-puma-gorro-archive-logo.png" alt="gorra puma beige">
                     <h3>GORRO PUMA ARCHIVE LOGO</h3>
                     <div class="precios-contenedor">
                         <strong class="precio">
@@ -369,7 +369,7 @@
             </div>
             <div class="productos">
                 <a href="">
-                    <img src="../img/acc-puma-morral-academy-portable.png" alt="vomero hombre gris">
+                    <img src="../img/acc-puma-morral-academy-portable.png" alt="morral puma academy portable">
                     <h3>MORRAL PUMA ACADEMY PORTABLE</h3>
                     <div class="precios-contenedor">
                         <strong class="precio">
