--- a/pages/calzado.html
+++ b/pages/calzado.html
@@ -315,7 +315,7 @@
                 </div>
                 <div class="productos">
                     <a href="">
-                        <img src="../img/nike-zoom-superfly-9-academy-xxv-jr-pleateadas-rosadas.png" alt="vomero hombre gris">
+                        <img src="../img/nike-zoom-superfly-9-academy-xxv-jr-pleateadas-rosadas.png" alt="superfly 9 academy xxv jr">
                         <h3>NIKE ZOOM SUPERFLY 9 ACADEMY XXV</h3>
                         <div class="precios-contenedor">
                             <strong class="precio">
