--- a/pages/indumentaria.html
+++ b/pages/indumentaria.html
@@ -191,7 +191,7 @@
         <section class="indumentaria-contenedor">
             <div class="productos">
                 <a href="">
-                    <img src="../img/indu-adidas-canguro-essentialas-brandlove.png" alt="w adidas court plataform">
+                    <img src="../img/indu-adidas-canguro-essentialas-brandlove.png" alt="canguro adidas essentials brandlove">
                     <h3>BUZO ADIDAS ESSENTIALS BRAND LOVE</h3>
                     <div class="precios-contenedor">
                         <strong class="precio">
@@ -203,7 +203,7 @@
             </div>
             <div class="productos">
                 <a href="">
-                    <img src="../img/indu-nacional-canguro-retrohealthy.png" alt="Lacoste ag-lt23 ultra">
+                    <img src="../img/indu-nacional-canguro-retrohealthy.png" alt="canguro nacional celeste">
                     <h3>BUZO NACIONAL RETRO HEALTHY FABRIC</h3>
                     <div class="precios-contenedor">
                         <strong class="precio">
@@ -215,7 +215,7 @@
             </div>
             <div class="productos">
                 <a href="">
-                    <img src="../img/indu-nike-campera-hoodiefz.png" alt="flex experience 11">
+                    <img src="../img/indu-nike-campera-hoodiefz.png" alt="campera nike negra">
                     <h3>CAMPERA NIKE CLUB HOODIE FZ</h3>
                     <div class="precios-contenedor">
                         <strong class="precio">
@@ -227,7 +227,7 @@
             </div>
             <div class="productos">
                 <a href="">
-                    <img src="../img/indu-nike-futbol-remera-camisetabarcelona-secundaria.png" alt="phantom gk pro fg">
+                    <img src="../img/indu-nike-futbol-remera-camisetabarcelona-secundaria.png" alt="camiseta barcelona alternativa">
                     <h3>CAMISETA DE FÚTBOL NIKE FC BARCELONA STADIUM 4TH</h3>
                     <div class="precios-contenedor">
                         <strong class="precio">
@@ -239,7 +239,7 @@
             </div>
             <div class="productos">
                 <a href="">
-                    <img src="../img/indu-nike-remera-drif-fit-uvmiler.png" alt="converse all star hi rojas">
+                    <img src="../img/indu-nike-remera-drif-fit-uvmiler.png" alt="remera drifit uv miller verde">
                     <h3>REMERA NIKE DRI-FIT MILER</h3>
                     <div class="precios-contenedor">
                         <strong class="precio">
@@ -255,7 +255,7 @@
             </div>
             <div class="productos">
                 <a href="">
-                    <img src="../img/indu-puma-calza-favoriteforever-highwasit.png" alt="court vision low blancas">
+                    <img src="../img/indu-puma-calza-favoriteforever-highwasit.png" alt="calza puma favorite forever">
                     <h3>CALZA PUMA FAVORITE FOREVER HIGH WAIST</h3>
                     <div class="precios-contenedor">
                         <strong class="precio">
@@ -267,7 +267,7 @@
             </div>
             <div class="productos">
                 <a href="">
-                    <img src="../img/indu-puma-canguro-powertape-tr.png" alt="air max sc">
+                    <img src="../img/indu-puma-canguro-powertape-tr.png" alt="canguro puma powertape training">
                     <h3>BUZO PUMA POWER TAPE TR</h3>
                     <div class="precios-contenedor">
                         <strong class="precio">
@@ -279,7 +279,7 @@
             </div>
             <div class="productos">
                 <a href="">
-                    <img src="../img/indu-puma-remera-essential-small-logo.png" alt="adidas hoops 3.0">
+                    <img src="../img/indu-puma-remera-essential-small-logo.png" alt="remera puma essential">
                     <h3>REMERA PUMA ESSENTIALS SMALL LOGO</h3>
                     <div class="precios-contenedor">
                         <strong class="precio">
@@ -291,7 +291,7 @@
             </div>
             <div class="productos">
                 <a href="">
-                    <img src="../img/indu-speedo-trajedebaño-logo-medalist.png" alt="puma smash 3.0">
+                    <img src="../img/indu-speedo-trajedebaño-logo-medalist.png" alt="malla speedo">
                     <h3>TRAJE DE BAÑO SPEEDO MEDLEY LOGO MEDALIST</h3>
                     <div class="precios-contenedor">
                         <strong class="precio">
@@ -303,7 +303,7 @@
             </div>
             <div class="productos">
                 <a href="">
-                    <img src="../img/indu-umbro-camperon-new-u-classic.png" alt="court vision negras">
+                    <img src="../img/indu-umbro-camperon-new-u-classic.png" alt="camperon umbro gris">
                     <h3>PARKA UMBRO NEW U-CLASSIC</h3>
                     <div class="precios-contenedor">
                         <strong class="precio">
@@ -315,7 +315,7 @@
             </div>
             <div class="productos">
                 <a href="">
-                    <img src="../img/indu-umbro-canguro-pocketfleece.png" alt="converse low blancas">
+                    <img src="../img/indu-umbro-canguro-pocketfleece.png" alt="canguro umbro gris">
                     <h3>CANGURO UMBRO POCKET FLEECE FABRIC</h3>
                     <div class="precios-contenedor">
                         <strong class="precio">
@@ -331,7 +331,7 @@
             </div>
             <div class="productos">
                 <a href="">
-                    <img src="../img/indu-uruguay-remera-puma-training.png"
+                    <img src="../img/indu-uruguay-remera-puma-training.png" alt="remera puma training uruguay" >
                         alt="vomero hombre gris">
                     <h3>REMERA PUMA URUGUAY TRAINING</h3>
                     <div class="precios-contenedor">
