--- a/pages/rebajas.html
+++ b/pages/rebajas.html
@@ -172,7 +172,7 @@
         <section class="rebajas-contenedor">
             <div class="imagenes-rebajas">
                 <a href="">
-                    <img src="../img/rebajas-acc-adidas-gorro-performance-beanie.png" alt="w adidas court plataform">
+                    <img src="../img/rebajas-acc-adidas-gorro-performance-beanie.png" alt="gorro de lana adidas gris">
                     <h3 class="producto-rebaja">GORRO ADIDAS PERFORMANCE BANIE</h3>
                     <div class="precios-contenedor">
                         <strong class="precio">
@@ -188,7 +188,7 @@
             </div>
             <div class="imagenes-rebajas">
                 <a href="">
-                    <img src="../img/rebajas-acc-nike-mochila-element.png" alt="Lacoste ag-lt23 ultra">
+                    <img src="../img/rebajas-acc-nike-mochila-element.png" alt="mochila nike elemnt">
                     <h3 class="producto-rebaja">MOCHILA NIKE ELEMENTAL</h3>
                     <div class="precios-contenedor">
                         <strong class="precio">
@@ -204,7 +204,7 @@
             </div>
             <div class="imagenes-rebajas">
                 <a href="">
-                    <img src="../img/rebajas-acc-nike-top-dri-fit.png" alt="flex experience 11">
+                    <img src="../img/rebajas-acc-nike-top-dri-fit.png" alt="w top dri fit verde">
                     <h3 class="producto-rebaja">TOP NIKE DRI-FIT INDY V-NECK</h3>
                     <div class="precios-contenedor">
                         <strong class="precio">
@@ -220,7 +220,7 @@
             </div>
             <div class="imagenes-rebajas">
                 <a href="">
-                    <img src="../img/rebajas-acc-umbro-canilleras-pro.png" alt="phantom gk pro fg">
+                    <img src="../img/rebajas-acc-umbro-canilleras-pro.png" alt="canilleras de futbol umbro pro">
                     <h3 class="producto-rebaja">CANILLERAS UMBRO PRO</h3>
                     <div class="precios-contenedor">
                         <strong class="precio">
@@ -236,7 +236,7 @@
             </div>
                 <div class="imagenes-rebajas">
                     <a href="">
-                    <img src="../img/rebajas-calzado-adidas-adilette-comfort.png" alt="converse all star hi rojas">
+                    <img src="../img/rebajas-calzado-adidas-adilette-comfort.png" alt="adidas adilette comofrt">
                     <h3 class="producto-rebaja">ADIDAS ADILETTE COMFORT</h3>
                     <div class="precios-contenedor">
                         <strong class="precio">
@@ -252,7 +252,7 @@
             </div>
             <div class="imagenes-rebajas">
                 <a href="">
-                    <img src="../img/rebajas-calzado-adidas-ozelle-cloudfoam-lifestyle.png.png"
+                    <img src="../img/rebajas-calzado-adidas-ozelle-cloudfoam-lifestyle.png.png" alt="adidas ozelle cloudfoam" >
                         alt="court vision low blancas">
                     <h3 class="producto-rebaja">ADIDAS OZELLE CLOUDFOAM LIFESTYLE</h3>
                     <div class="precios-contenedor">
@@ -269,7 +269,7 @@
             </div>
             <div class="imagenes-rebajas">
                 <a href="">
-                    <img src="../img/rebajas-calzado-nike-react-infinity-runfk3.png" alt="air max sc">
+                    <img src="../img/rebajas-calzado-nike-react-infinity-runfk3.png" alt="nike react infinity run fk3">
                     <h3 class="producto-rebaja">NIKE REACT INFINITY RUN FK 3</h3>
                     <div class="precios-contenedor">
                         <strong class="precio">
@@ -285,7 +285,7 @@
             </div>
             <div class="imagenes-rebajas">
                 <a href="">
-                    <img src="../img/rebajas-calzado-puma-anzarun-lite-slipon.png" alt="adidas hoops 3.0">
+                    <img src="../img/rebajas-calzado-puma-anzarun-lite-slipon.png" alt="calzado puma anzarun lit slipon">
                     <h3 class="producto-rebaja">PUMA ANZARUN LITE SLIPON</h3>
                     <div class="precios-contenedor">
                         <strong class="precio">
@@ -301,7 +301,7 @@
             </div>
             <div class="imagenes-rebajas">
                 <a href="">
-                    <img src="../img/rebajas-indu-nike-pantalon-stardust-jogger.png" alt="puma smash 3.0">
+                    <img src="../img/rebajas-indu-nike-pantalon-stardust-jogger.png" alt="pantalon adidas stardust">
                     <h3 class="producto-rebaja">PANTALON NIKE NSW STARDUST JOGGER</h3>
                     <div class="precios-contenedor">
                         <strong class="precio">
@@ -317,7 +317,7 @@
             </div>
             <div class="imagenes-rebajas">
                 <a href="">
-                    <img src="../img/rebajas-indu-nike-remera-dri-fit-run-division.png" alt="court vision negras">
+                    <img src="../img/rebajas-indu-nike-remera-dri-fit-run-division.png" alt="remera nike dri-fit bordo">
                     <h3 class="producto-rebaja">REMERA NIKE DRI-FIT RUN DIVISION</h3>
                     <div class="precios-contenedor">
                         <strong class="precio">
@@ -333,7 +333,7 @@
             </div>
             <div class="imagenes-rebajas">
                 <a href="">
-                    <img src="../img/rebajas-indu-nike-remera-psg-alternativa.png" alt="converse low blancas">
+                    <img src="../img/rebajas-indu-nike-remera-psg-alternativa.png" alt="camiseta psg alternativa">
                     <h3 class="producto-rebaja">REMERA NIKE PSG ALTERNATIVO</h3>
                     <div class="precios-contenedor">
                         <strong class="precio">
@@ -349,7 +349,7 @@
             </div>
             <div class="imagenes-rebajas">
                 <a href="">
-                    <img src="../img/rebajas-indu-nike-remera-sportwear-club-tee.png" alt="vomero hombre gris">
+                    <img src="../img/rebajas-indu-nike-remera-sportwear-club-tee.png" alt="w remera nike spw salmon">
                     <h3 class="producto-rebaja">REMERA NIKE SPORTWEAR CLUB TEE</h3>
                     <div class="precios-contenedor">
                         <strong class="precio">
