tercera pre-entrega

--- a/index.html
+++ b/index.html
@@ -13,11 +13,15 @@
     <!---ANIMATIONS---->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <!----META DESCRIPTION ---->
-
+    <meta name="description" content="Encontrá lo mejor para vos en El Rincón, calzado, indumentaria y accesorios casual y deportivo. De la mano de las marcas líderes del mercado. La mejor calidad al mejor precio, no te lo pierdas">
     <!----KEYWORD---->
-
+    <meta name="keywords" content="calzado, indumentaria, accesorios, moda, deporte, champion, pelota, calza, remera, correr, entrenar, buzo, pantalon, la cancha, las zapas, nike, adidas, puma, converse, lacoste, ">
     <!----FAVICON---->
     <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
+    <!----OPEN GRAPH---->
+    <meta property="og:type" content="ecommerce">
+    <meta property="og:title" content="El Rincón">
+    <meta property="og:description" content="Tienda casual y deportiva online, la mejor calidad al mejor precio">
 
 </head>
 
